--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,19 @@
 ---
-# tasks file for lighthouse-role
+- name: Install git
+  become: true
+  ansible.builtin.apt:
+    name: git
+    state: present
+- name: Copy lighthouse rfom git
+  ansible.builtin.git:
+    repo: "{{ lighthouse_vcs }}"
+    version: master
+    dest: "{{ lighthouse_dir }}"
+  become: true
+- name: Create lighthouse config
+  become: true
+  ansible.builtin.template:
+    src: lighthouse.j2
+    dest: /etc/nginx/conf.d/default.conf
+    mode: "0644"
+  notify: Reload nginx service
